src/objects/MUSW__Record_Manage_Setting__mdt.object
<CustomObject>
    <description>Settings for the Record Manage lightning components</description>
    <fields>
        <fullName>MUSW__Allow_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, user will be able to delete records from the RecordManage page</description>
        <label>Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Fieldset_Edit__c</fullName>
        <description>Set of fields that are to be shown in the mass edit functionality of RecordManage lightning app</description>
        <label>Field Set Name (Mass Edit)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Fieldset_View__c</fullName>
        <label>Field Set Name (View)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__List_Object__c</fullName>
        <label>List Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Lookup__c</fullName>
        <label>Parent Lookup Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__View_Length__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of records to show on the page.</description>
        <label>Number of Records per page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Record Manage Setting</label>
    <pluralLabel>Record Manage Settings</pluralLabel>
</CustomObject>